Fix dark mode flashing

--- a/app/static/css/modules/solved_board.css
+++ b/app/static/css/modules/solved_board.css
@@ -51,6 +51,7 @@
 }
 
 #dictionary-checkboxes button {
+    color: var(--fg-color-1);
     background: var(--bg-color-2);
 }
 
